--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "release:publish": "yarn release:build ; yarn workspaces foreach -t -v --worktree --no-private npm publish --tolerate-republish --access=public ; yarn release:clean"
   },
   "devDependencies": {
+    "@polkadot/apps-config": "^0.146.1",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "eslint": "^8.53.0",
